--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -39,18 +39,41 @@
 @import "theme/pages/areas"; // Areas We Serve
 
 
+.profile-image {
+    width: 100%;
+    border: 9px solid #00ABF8;
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 100%;
+    display: block;
+    max-width: 100%!important;
+    @include media-breakpoint-down(md) {
+        width: 100%;
+        height: auto;
+    }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.row-center {
+    justify-content: center;
+    .services-box {
+        margin-bottom: 50px;
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 20px!important;
+        }
+        h4 {
+            font-size: 20px!important;
+            @include media-breakpoint-only(md) {
+                font-size: 16px!important;
+            }
+        }
+    }
+    .col-md-2 {
+        flex: 0 0 20%;
+        max-width: 20%;
+        @include media-breakpoint-down(sm) {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+    }
+}
