--- a/sass/theme/components/_header.scss
+++ b/sass/theme/components/_header.scss
@@ -134,6 +134,7 @@
           li {
             margin-left: 17px;
             margin-right: 17px;
+            position: relative;
             @include media-breakpoint-only(lg) {
                 margin-left: 14px;
                 margin-right: 14px;
@@ -153,7 +154,8 @@
               }
               @include media-breakpoint-only(lg) {
                 font-size: 16px;
-              }
+              }           
+
               &:after {
                 display: block;
                 height: 1px;
@@ -176,6 +178,57 @@
                 }
               }
             }
+
+            .sub-menu {
+
+              position: absolute;
+              top: 100%;
+              left: 0;
+              z-index: 1000;
+              display: none;
+              float: left;
+              margin: 0;
+              min-width: 240px;
+              padding: 20px;
+              border-radius: 30px;
+
+              display: block;
+              visibility: hidden;
+              opacity: 0;
+              -webkit-transform: translateY(20px);
+              transform: translateY(20px);
+              -webkit-transition: all .3s ease-in;
+              transition: all .3s ease-in;
+              background:#FFAF32;
+              border: 0;  
+              margin-top: 10px;
+              li {
+                a {
+                  font-size: 16px;
+                  &:hover {
+                    opacity: 0.6;
+                  }
+                  &:after {
+                    display: none;
+                  }
+                }
+              }
+            }   
+
+            &:hover {
+              .sub-menu {
+                visibility: visible;
+                opacity: 1;
+                -webkit-transform: scaleY(1);
+                -moz-transform: scaleY(1);
+                -ms-transform: scaleY(1);
+                -o-transform: scaleY(1);
+                transform: scaleY(1);
+                opacity: 1;
+                visibility: visible;                
+              }
+            }
+
           }
         }
       }
