--- a/sass/theme/base/_mixins.scss
+++ b/sass/theme/base/_mixins.scss
@@ -185,6 +185,7 @@
     font-size: 1.438em;
     color: $orange;
     text-transform: uppercase;
+    margin-bottom: 15px;
     @include breakpoint (desktop) {
         font-size: 1.313em;
     }
@@ -195,10 +196,10 @@
        font-size: 1.125em;
     }
     @include media-breakpoint-down(sm) {
-        font-size: 0.938em;
+        font-size: 18px;
     }
     @include media-breakpoint-down(sm) {
-        font-size: 0.813em;
+        font-size: 18px;
     }
 }
 
